--- a/src/main/webapp/resources/JahiaPortal.properties
+++ b/src/main/webapp/resources/JahiaPortal.properties
@@ -1,4 +1,4 @@
 jnt_portal=Portal
 label.portal.column= Portal Column
-label.portal.widget.add=widget has been added to your portal page"
+label.portal.widget.add=widget has been added to your portal page
 label.portal.rss.add=rss widget has been added to your portal page
