--- a/src/main/webapp/resources/JahiaPortal.properties
+++ b/src/main/webapp/resources/JahiaPortal.properties
@@ -1,4 +1,6 @@
 jnt_portal=My Portal
-label.portal.column= Portal Column
-label.portal.widget.add=widget has been added to your portal page
+jnt_scriptGadget=Script Gadget
+jnt_scriptGadget.script=Script code
+label.portal.column=Portal Column
 label.portal.rss.add=rss widget has been added to your portal page
+label.portal.widget.add=widget has been added to your portal page
