--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
                             <Specification-Version>${project.version}</Specification-Version>
                             <Specification-Vendor>${jahia.manifest.vendor.name}</Specification-Vendor>
                             <package-name>${project.name}</package-name>
-                            <depends>Default Jahia Templates</depends>
+                            <depends>Default Jahia Templates,Jahia User Profile</depends>
                             <root-folder>${artifactId}</root-folder>
                         </manifestEntries>
                     </archive>
