--- a/src/main/webapp/resources/JahiaPortal.properties
+++ b/src/main/webapp/resources/JahiaPortal.properties
@@ -1,4 +1,5 @@
-jnt_portal=My Portal
+jnt_portal=Portal
+jnt_currentUserPortal=My Portal (current user)
 jnt_scriptGadget=Script Gadget
 jnt_scriptGadget.script=Script code
 label.portal.column=Portal Column
