updated version number

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     </parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>portal</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <name>Jahia Portal</name>
     <packaging>war</packaging>
     <description>This is a custom module for running on a Jahia server.</description>
