--- a/src/main/webapp/resources/JahiaPortal.properties
+++ b/src/main/webapp/resources/JahiaPortal.properties
@@ -1,5 +1,8 @@
 jnt_portal=Portal
+jnt_portal.componentsFolder=Select a folder for the components
+jnt_portal.columns=Number of columns
 jnt_currentUserPortal=My Portal (current user)
+jnt_currentUserPortal.defaultPortal=Select the default portal
 jnt_scriptGadget=Script Gadget
 jnt_scriptGadget.script=Script code
 label.portal.column=Portal Column
