--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,11 @@
     <parent>
         <artifactId>jahia-modules</artifactId>
         <groupId>org.jahia.modules</groupId>
-        <version>6.5-SNAPSHOT</version>
+        <version>6.5.0.0</version>
     </parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>portal</artifactId>
-    <version>1.0-RC2-SNAPSHOT</version>
+    <version>1.0</version>
     <name>Jahia Portal</name>
     <packaging>war</packaging>
     <description>This is a custom module for running on a Jahia server.</description>
@@ -57,13 +57,13 @@
         <dependency>
             <groupId>org.jahia.server</groupId>
             <artifactId>jahia-impl</artifactId>
-            <version>6.5-SNAPSHOT</version>
+            <version>6.5.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.server</groupId>
             <artifactId>jahia-taglib</artifactId>
-            <version>6.5-SNAPSHOT</version>
+            <version>6.5.0.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
