--- a/src/main/webapp/resources/JahiaPortal.properties
+++ b/src/main/webapp/resources/JahiaPortal.properties
@@ -5,7 +5,16 @@ jnt_currentUserPortal=My Portal (current user)
 jnt_currentUserPortal.defaultPortal=Select the default portal
 jnt_scriptGadget=Script Gadget
 jnt_scriptGadget.script=Script code
+label.portal.addComponents=Add Components
+label.portal.addRSS=Add RSS
+label.portal.addRSSWidget=Add Rss Widget
+label.portal.addScriptGadget=Add Script Gadget
+label.portal.addScriptWidget=Add Script Widget
+label.portal.addWidget=Add Widget
 label.portal.column=Portal Column
 label.portal.rss.add=rss widget has been added to your portal page
+label.portal.rss.feedURL=Rss feed URL
+label.portal.rss.noOfFeeds=Number of feeds
+label.portal.script=Script
 label.portal.widget.add=widget has been added to your portal page
 label.portal.only.live=Your personnal portal is only availabe in live<br/>In edit mode you can only manage the components that are available in this portal under the portal-components Area
