--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,11 @@
     <parent>
         <artifactId>jahia-modules</artifactId>
         <groupId>org.jahia.modules</groupId>
-        <version>6.5.1.0-SNAPSHOT</version>
+        <version>6.5.1.0</version>
     </parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>portal</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <name>Jahia Portal</name>
     <packaging>war</packaging>
     <description>This is a custom module for running on a Jahia server.</description>
@@ -62,13 +62,13 @@
         <dependency>
             <groupId>org.jahia.server</groupId>
             <artifactId>jahia-impl</artifactId>
-            <version>6.5.1.0-SNAPSHOT</version>
+            <version>6.5.1.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.server</groupId>
             <artifactId>jahia-taglib</artifactId>
-            <version>6.5.1.0-SNAPSHOT</version>
+            <version>6.5.1.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
