BOUYGUES-18 : French translation missing for myPortal

--- a/src/main/webapp/resources/JahiaMyPortal.properties
+++ b/src/main/webapp/resources/JahiaMyPortal.properties
@@ -13,7 +13,7 @@ label.portal.addScriptWidget=Add Script Widget
 label.portal.addWidget=Add Widget
 label.portal.column=Portal Column
 label.portal.create=Create my portal
-label.portal.only.live=Your personnal portal is only availabe in live<br/>In edit mode you can only manage the components that are available in this portal under the portal-components Area
+label.portal.only.live=Your personal portal is only available in live. To administrate it, go to the Content Tab of the Selector, select System Site > Content > My Portal Component.
 label.portal.rss.add=rss widget has been added to your portal page
 label.portal.rss.feedURL=Rss feed URL
 label.portal.rss.noOfFeeds=Number of feeds
