Fix labels homogeneity / spelling mistakes

--- a/src/main/webapp/resources/JahiaMyPortal.properties
+++ b/src/main/webapp/resources/JahiaMyPortal.properties
@@ -6,16 +6,16 @@ jnt_portal.componentsFolder=Select a folder for the components
 jnt_scriptGadget=Script Gadget
 jnt_scriptGadget.script=Script code
 label.portal.addComponents=Add Components
-label.portal.addRSS=Add RSS
-label.portal.addRSSWidget=Add Rss Widget
-label.portal.addScriptGadget=Add Script Gadget
+label.portal.addRSS=Add RSS feed
+label.portal.addRSSWidget=Add RSS Widget
+label.portal.addScriptGadget=Add Script Widget
 label.portal.addScriptWidget=Add Script Widget
 label.portal.addWidget=Add Widget
 label.portal.column=Portal Column
 label.portal.create=Create my portal
 label.portal.only.live=Your personal portal is only available in live. To administrate it, go to the Content Tab of the Selector, select System Site > Content > My Portal Component.
-label.portal.rss.add=rss widget has been added to your portal page
-label.portal.rss.feedURL=Rss feed URL
+label.portal.rss.add=RSS widget has been added to your portal page
+label.portal.rss.feedURL=RSS feed URL
 label.portal.rss.noOfFeeds=Number of feeds
 label.portal.script=Script
 label.portal.widget.add=widget has been added to your portal page
