--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,11 @@
     <parent>
         <artifactId>jahia-modules</artifactId>
         <groupId>org.jahia.modules</groupId>
-        <version>6.6.0.1</version>
+        <version>6.6.0.2-SNAPSHOT</version>
     </parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>portal</artifactId>
-    <version>1.2.1</version>
+    <version>1.2.2-SNAPSHOT</version>
     <name>Jahia My Portal</name>
     <packaging>war</packaging>
     <description>This is a custom module for running on a Jahia server.</description>
