--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     </parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>portal</artifactId>
-    <version>1.2.2-SNAPSHOT</version>
+    <version>1.3-SNAPSHOT</version>
     <name>Jahia My Portal</name>
     <packaging>war</packaging>
     <description>This is a custom module for running on a Jahia server.</description>
@@ -57,6 +57,20 @@
         <url>scm:git:git@github.com:Jahia/JahiApp-MyPortal.git</url>
         <developerConnection>scm:git:git@github.com:Jahia/JahiApp-MyPortal.git</developerConnection>
     </scm>
+
+    <repositories>
+        <repository>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>jahiaRepository</id>
+            <name>Jahia's Maven Repository</name>
+            <url>http://maven.jahia.org/maven2</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
