--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
                             <Specification-Version>${project.version}</Specification-Version>
                             <Specification-Vendor>${jahia.manifest.vendor.name}</Specification-Vendor>
                             <package-name>${project.name}</package-name>
-                            <depends>default,profile,grid</depends>
+                            <depends>default,profile,grid,rss</depends>
                             <root-folder>${project.artifactId}</root-folder>
                             <module-type>profileModule</module-type>
                         </manifestEntries>
