--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     </parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>portal</artifactId>
-    <version>1.3</version>
+    <version>1.4-SNAPSHOT</version>
     <name>Jahia My Portal</name>
     <packaging>war</packaging>
     <description>This is a custom module for running on a Jahia server.</description>
